--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class = "wrapper">
     <header>
       <nav>
         <ul>
@@ -32,5 +33,7 @@
         </div>
       </div>
     </section>
+    <footer>&copy; 2025 All Rights Reserved.</footer>
+    </div>
   </body>
 </html>
