Add about me and skills section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yasemin Alan - Junior Full Stack Developer</title>
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -30,6 +34,60 @@
             <br>Want to know more about me? Keep reading!</br>
           </p>
           <a href="#">Download CV</a>
+        </div>
+      </div>
+      <div class = "about-me">
+        <h2>About Me</h2>
+        <p>Former chemical engineer with a
+          master’s degree in pharmaceutical
+          biotechnology in Switzerland, now
+          pursuing a career in Full Stack
+          Development. <br>Passionate about
+          problem-solving and technology, eager
+          to apply my analytical skills and growing
+          expertise in a dynamic development
+          role.</p>
+      </div>
+      <div class = "skills">
+        <h2>Skills</h2>
+        <h3>What I know?</h3>
+        <div class="grid-container">
+          <div class="grid-item">
+            <i class="fab fa-java"></i>
+            <p>Java</p>
+          </div>
+          <div class="grid-item">
+            <i class="fas fa-leaf"></i>
+            <p>Spring Boot</p>
+          </div>
+          <div class="grid-item">
+            <i class="fab fa-git-alt"></i>
+            <p>Version Control (Git)</p>
+          </div>
+          <div class="grid-item">
+            <i class="fas fa-database"></i>
+            <p>SQL</p>
+          </div>
+          <div class="grid-item">
+            <i class="fas fa-cubes"></i>
+            <p>OOP</p>
+          </div>
+          <div class="grid-item">
+            <i class="fab fa-html5"></i>
+            <p>HTML</p>
+          </div>
+          <div class="grid-item">
+            <i class="fab fa-css3-alt"></i>
+            <p>CSS</p>
+          </div>
+          <div class="grid-item">
+            <i class="fas fa-code-branch"></i>
+            <p>Data Structures</p>
+          </div>
+          <div class="grid-item">
+            <i class="fab fa-r-project"></i>
+            <p>R</p>
+          </div>
         </div>
       </div>
     </section>
