--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 />
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class = "wrapper">
+
     <header>
       <nav>
         <ul>
@@ -22,8 +23,9 @@
         </ul>
       </nav>
     </header>
+      <div class = "wrapper">
     <section>
-      <div class="introduction">
+      <div class="introduction section-container container">
         <img src="images/portrait.jpeg" alt="my-photo" />
         <div class="introduction-text">
           <h1>Yasemin Alan</h1>
@@ -36,7 +38,8 @@
           <a href="#">Download CV</a>
         </div>
       </div>
-      <div class = "about-me">
+
+      <div class = "about-me section-container">
         <h2>About Me</h2>
         <p>Former chemical engineer with a
           master’s degree in pharmaceutical
@@ -48,7 +51,7 @@
           expertise in a dynamic development
           role.</p>
       </div>
-      <div class = "skills">
+      <div class = "skills section-container">
         <h2>Skills</h2>
         <h3>What I know?</h3>
         <div class="grid-container">
@@ -90,8 +93,34 @@
           </div>
         </div>
       </div>
+      <div class = "contact section-container">
+        <h2>Contact</h2>
+        <h3>Get in Touch</h3>
+        <form action="" method="post">
+        <fieldset>
+          <label for="email"> <b>Email</b></label>
+          <br>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="me@example.com"
+          />
+          <br>
+          <labels for="message"><b>Your Message</b></labels>
+          <br>
+          <textarea
+            name="message"
+            id="message"
+            placeholder="Type your message here..."
+          ></textarea>
+        </fieldset>
+        <button type="submit" class="button">Send</button>
+      </form>
+      </div>
     </section>
-    <footer>&copy; 2025 All Rights Reserved.</footer>
     </div>
+    <footer>&copy; 2025 All Rights Reserved.</footer>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script> -->
   </body>
 </html>
