Add refactor page

--- a/index.html
+++ b/index.html
@@ -1,151 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yasemin Alan - Junior Full Stack Developer</title>
-    <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
 
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#about-me">About Me</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-      <div class = "wrapper">
-    <section>
-      <section id = "introduction">
-      <div class="introduction section-container container">
-        <img src="images/portrait.jpeg" alt="my-photo" />
-        <div class="introduction-text">
-          <h1>Yasemin Alan</h1>
-          <h2>Junior Full Stack Developer</h2>
-          <p>
-            Currently a Powercoders participant, passionate about coding and
-            enhancing both backend and frontend skills.
-            <br>Want to know more about me? Keep reading!</br>
-          </p>
-          <a href="documents/cv.pdf" target="_blank">
-            Download CV  <i class="fas fa-download"></i></a>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Yasemin Alan - Junior Full Stack Developer</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#about-me">About Me</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section id="introduction">
+    <div class="introduction">
+      <img src="images/portrait.jpeg" alt="my-photo" />
+      <div>
+        <h1>Yasemin Alan</h1>
+        <h2>Junior Full Stack Developer</h2>
+        <p>
+          Currently a Powercoders participant, passionate about coding and
+          enhancing both backend and frontend skills.
+          <br>Want to know more about me? Keep reading!</br>
+        </p>
+        <a href="documents/cv.pdf" target="_blank">
+          Download CV <i class="fas fa-download"></i></a>
+      </div>
+    </div>
+  </section>
+
+  <section id="about-me">
+    <div class="about-me">
+      <h2>About Me</h2>
+      <p>Former chemical engineer with a
+        master’s degree in pharmaceutical
+        biotechnology in Switzerland, now
+        pursuing a career in Full Stack
+        Development. <br>Passionate about
+        problem-solving and technology, eager
+        to apply my analytical skills and growing
+        expertise in a dynamic development
+        role.</p>
+    </div>
+  </section>
+
+  <section id="skills">
+    <div>
+      <h2>Skills</h2>
+      <h3>What I know?</h3>
+      <div class="grid-container">
+        <div class="grid-item">
+          <i class="fab fa-java"></i>
+          <p>Java</p>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-leaf"></i>
+          <p>Spring Boot</p>
+        </div>
+        <div class="grid-item">
+          <i class="fab fa-git-alt"></i>
+          <p>Version Control (Git)</p>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-database"></i>
+          <p>SQL</p>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-cubes"></i>
+          <p>OOP</p>
+        </div>
+        <div class="grid-item">
+          <i class="fab fa-html5"></i>
+          <p>HTML</p>
+        </div>
+        <div class="grid-item">
+          <i class="fab fa-css3-alt"></i>
+          <p>CSS</p>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-code-branch"></i>
+          <p>Data Structures</p>
+        </div>
+        <div class="grid-item">
+          <i class="fab fa-r-project"></i>
+          <p>R</p>
         </div>
       </div>
-    </section>
-    
-    <section id = "about-me">
-      <div class = "about-me section-container">
-        <h2>About Me</h2>
-        <p>Former chemical engineer with a
-          master’s degree in pharmaceutical
-          biotechnology in Switzerland, now
-          pursuing a career in Full Stack
-          Development. <br>Passionate about
-          problem-solving and technology, eager
-          to apply my analytical skills and growing
-          expertise in a dynamic development
-          role.</p>
-      </div>
-    </section>
+    </div>
+  </section>
 
-    <section id = "skills">
-      <div class = "skills section-container">
-        <h2>Skills</h2>
-        <h3>What I know?</h3>
-        <div class="grid-container">
-          <div class="grid-item">
-            <i class="fab fa-java"></i>
-            <p>Java</p>
-          </div>
-          <div class="grid-item">
-            <i class="fas fa-leaf"></i>
-            <p>Spring Boot</p>
-          </div>
-          <div class="grid-item">
-            <i class="fab fa-git-alt"></i>
-            <p>Version Control (Git)</p>
-          </div>
-          <div class="grid-item">
-            <i class="fas fa-database"></i>
-            <p>SQL</p>
-          </div>
-          <div class="grid-item">
-            <i class="fas fa-cubes"></i>
-            <p>OOP</p>
-          </div>
-          <div class="grid-item">
-            <i class="fab fa-html5"></i>
-            <p>HTML</p>
-          </div>
-          <div class="grid-item">
-            <i class="fab fa-css3-alt"></i>
-            <p>CSS</p>
-          </div>
-          <div class="grid-item">
-            <i class="fas fa-code-branch"></i>
-            <p>Data Structures</p>
-          </div>
-          <div class="grid-item">
-            <i class="fab fa-r-project"></i>
-            <p>R</p>
-          </div>
-        </div>
-      </div>
-    </section>
+  <section id="projects">
+    <h2>Some of My Projects</h2>
+    <div class="project-items">
+      <div class="project"></div>
+      <div class="project"></div>
+    </div>
+    <div class="project-items">
+      <div class="project"></div>
+      <div class="project"></div>
+    </div>
+  </section>
 
-    <section id = "projects">
-      <div class = "projects section-container">
-        <h2>Some of My Projects</h2>
-        <div class="project-items">
-          <div class = "project"></div>
-          <div class = "project"></div>
-      </div>
-      <div class="project-items">
-        <div class = "project"></div>
-        <div class = "project"></div>
-      </div>
-      </div>
-    </section>
-
-    <section id = "contact">
-      <div class = "contact section-container">
-        <h2>Contact</h2>
-        <h3>Get in Touch</h3>
-        <form action="" method="post">
+  <section id="contact">
+    <div class="contact">
+      <h2>Contact</h2>
+      <h3>Get in Touch</h3>
+      <form action="" method="post">
         <fieldset>
           <label for="email"> <b>Email</b></label>
           <br>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="me@example.com"
-          />
+          <input type="email" id="email" name="email" placeholder="me@example.com" />
           <br>
           <labels for="message"><b>Your Message</b></labels>
           <br>
-          <textarea
-            name="message"
-            id="message"
-            placeholder="Type your message here..."
-          ></textarea>
+          <textarea name="message" id="message" placeholder="Type your message here..."></textarea>
         </fieldset>
         <button type="submit" class="button">Send</button>
       </form>
-      </div>
-    </section>
-    </section>
     </div>
-    <footer>&copy; 2025 All Rights Reserved.</footer>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script> -->
-  </body>
+  </section>
+
+  <footer>&copy; 2025 All Rights Reserved.</footer>
+
+</body>
+
 </html>
