Add refactor for each section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <header>
     <nav>
       <ul>
+        <li><a href="#introduction">Home</a></li>
         <li><a href="#about-me">About Me</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -20,6 +21,7 @@
       </ul>
     </nav>
   </header>
+
   <section id="introduction">
     <div class="introduction">
       <img src="images/portrait.jpeg" alt="my-photo" />
@@ -39,23 +41,24 @@
 
   <section id="about-me">
     <div class="about-me">
-      <h2>About Me</h2>
-      <p>Former chemical engineer with a
-        master’s degree in pharmaceutical
-        biotechnology in Switzerland, now
-        pursuing a career in Full Stack
-        Development. <br>Passionate about
-        problem-solving and technology, eager
-        to apply my analytical skills and growing
-        expertise in a dynamic development
-        role.</p>
+      <h2><i class="fas fa-user-circle"></i> About Me</h2>
+      <p>I'm originally from <strong>Turkey</strong>, where I studied <strong>Chemical Engineering</strong> and worked
+        in the R&D lab of a pharmaceutical
+        company. Later, I moved to <strong>Switzerland</strong> to pursue a Master's degree in <strong>Pharmaceutical
+          Biotechnology</strong>. While my
+        background is rooted in science, I've always had a strong interest in programming and technology. Over time,
+        that passion led me to shift my career toward <strong>IT</strong>, and I'm now focused on becoming a
+        <strong>Full Stack Developer</strong>. I
+        enjoy tackling complex problems and bringing ideas to life through code. In my free time, I love
+        <strong>traveling</strong>,
+        <strong>reading books</strong>, and staying active at the <strong>gym</strong>.
+      </p>
     </div>
   </section>
 
   <section id="skills">
-    <div>
-      <h2>Skills</h2>
-      <h3>What I know?</h3>
+    <div class="skills">
+      <h2><i class="fas fa-laptop-code"></i> My Skills</h2>
       <div class="grid-container">
         <div class="grid-item">
           <i class="fab fa-java"></i>
@@ -93,26 +96,28 @@
           <i class="fab fa-r-project"></i>
           <p>R</p>
         </div>
+        <div class="grid-item">
+          <i class="fab fa-js"></i>
+          <p>JavaScript</p>
+        </div>
       </div>
     </div>
   </section>
 
   <section id="projects">
-    <h2>Some of My Projects</h2>
-    <div class="project-items">
-      <div class="project"></div>
-      <div class="project"></div>
-    </div>
-    <div class="project-items">
-      <div class="project"></div>
-      <div class="project"></div>
+    <div class="projects">
+      <h2><i class="fas fa-project-diagram"></i> Projects</h2>
+      <div class="project-items">
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+      </div>
     </div>
   </section>
 
   <section id="contact">
     <div class="contact">
-      <h2>Contact</h2>
-      <h3>Get in Touch</h3>
+      <h2><i class="fas fa-envelope"></i> Contact</h2>
       <form action="" method="post">
         <fieldset>
           <label for="email"> <b>Email</b></label>
@@ -129,7 +134,6 @@
   </section>
 
   <footer>&copy; 2025 All Rights Reserved.</footer>
-
 </body>
 
 </html>
