--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#introduction">Home</a></li>
-        <li><a href="#about-me">About Me</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a class="underline-animate" href="#introduction"><i class="fa-solid fa-house"></i></a></li>
+        <li><a class="underline-animate" href="#about-me">About Me</a></li>
+        <li><a class="underline-animate" href="#skills">Skills</a></li>
+        <li><a class="underline-animate" href="#projects">Projects</a></li>
+        <li><a class="underline-animate" href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -108,9 +108,30 @@
     <div class="projects">
       <h2><i class="fas fa-project-diagram"></i> Projects</h2>
       <div class="project-items">
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
+        <div class="project-container">
+          <div class="project">
+            <a href="https://github.com/yasminalan/todo-app" target="_blank">
+              <img src="images/todo.jpg" alt="Todo List">
+            </a>
+          </div>
+          <h3>To-Do List</h3>
+        </div>
+        <div class="project-container">
+          <div class="project">
+            <a href="guess-my-number/index.html" target="_blank">
+              <img src="guess-my-number/images/numbers.avif" alt="Guess My Number Game">
+            </a>
+          </div>
+          <h3>Guess My Number Game</h3>
+        </div>
+        <div class="project-container">
+          <div class="project">
+            <a href="currency_converter/index.html" target="_blank">
+              <img src="currency_converter/images/currency.png" alt="Currency Converter">
+            </a>
+          </div>
+          <h3>Currency Converter</h3>
+        </div>
       </div>
     </div>
   </section>
@@ -118,7 +139,7 @@
   <section id="contact">
     <div class="contact">
       <h2><i class="fas fa-envelope"></i> Contact</h2>
-      <form action="" method="post">
+      <form action="https://formsubmit.co/yaseminalan1996@gmail.com" method="post">
         <fieldset>
           <label for="email"> <b>Email</b></label>
           <br>
