--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>
           Currently a Powercoders participant, passionate about coding and
           enhancing both backend and frontend skills.
-          <br>Want to know more about me? Keep reading!</br>
+          <br>Want to know more about me? Keep reading!
         </p>
         <a href="documents/cv.pdf" target="_blank">
           Download CV <i class="fas fa-download"></i></a>
@@ -42,16 +42,15 @@
   <section id="about-me">
     <div class="about-me">
       <h2><i class="fas fa-user-circle"></i> About Me</h2>
-      <p>I'm originally from <strong>Turkey</strong>, where I studied <strong>Chemical Engineering</strong> and worked
-        in the R&D lab of a pharmaceutical
-        company. Later, I moved to <strong>Switzerland</strong> to pursue a Master's degree in <strong>Pharmaceutical
-          Biotechnology</strong>. While my
-        background is rooted in science, I've always had a strong interest in programming and technology. Over time,
+      <p>I am originally from <strong>Turkey</strong>, where I studied <strong>Chemical Engineering</strong> and worked
+        in the R&D lab of a pharmaceutical company. Later, I moved to <strong>Switzerland</strong> to pursue a Master's
+        degree in <strong>Pharmaceutical
+          Biotechnology</strong>. While my background is rooted in science, I've always had a strong interest in
+        programming and technology. Over time,
         that passion led me to shift my career toward <strong>IT</strong>, and I'm now focused on becoming a
-        <strong>Full Stack Developer</strong>. I
-        enjoy tackling complex problems and bringing ideas to life through code. In my free time, I love
-        <strong>traveling</strong>,
-        <strong>reading books</strong>, and staying active at the <strong>gym</strong>.
+        <strong>Full Stack Developer</strong>. I enjoy tackling complex problems and bringing ideas to life through
+        code. In my free time, I love
+        <strong>traveling</strong>, <strong>reading books</strong>, and staying active at the <strong>gym</strong>.
       </p>
     </div>
   </section>
@@ -108,33 +107,36 @@
     <div class="projects">
       <h2><i class="fas fa-project-diagram"></i> Projects</h2>
       <div class="project-items">
-        <div class="project-container">
-          <div class="project">
-            <a href="https://github.com/yasminalan/todo-app" target="_blank">
+        <a href="https://github.com/yasminalan/todo-app" target="_blank" class="project-container-link">
+          <div class="project-container">
+            <div class="project">
               <img src="images/todo.jpg" alt="Todo List">
-            </a>
+            </div>
+            <h3>To-Do List</h3>
           </div>
-          <h3>To-Do List</h3>
-        </div>
-        <div class="project-container">
-          <div class="project">
-            <a href="guess-my-number/index.html" target="_blank">
+        </a>
+
+        <a href="guess-my-number/index.html" target="_blank" class="project-container-link">
+          <div class="project-container">
+            <div class="project">
               <img src="guess-my-number/images/numbers.avif" alt="Guess My Number Game">
-            </a>
+            </div>
+            <h3>Guess My Number Game</h3>
           </div>
-          <h3>Guess My Number Game</h3>
-        </div>
-        <div class="project-container">
-          <div class="project">
-            <a href="currency_converter/index.html" target="_blank">
+        </a>
+
+        <a href="currency_converter/index.html" target="_blank" class="project-container-link">
+          <div class="project-container">
+            <div class="project">
               <img src="currency_converter/images/currency.png" alt="Currency Converter">
-            </a>
+            </div>
+            <h3>Currency Converter</h3>
           </div>
-          <h3>Currency Converter</h3>
-        </div>
+        </a>
       </div>
     </div>
   </section>
+
 
   <section id="contact">
     <div class="contact">
@@ -145,7 +147,7 @@
           <br>
           <input type="email" id="email" name="email" placeholder="me@example.com" />
           <br>
-          <labels for="message"><b>Your Message</b></labels>
+          <label for="message"> <b>Your Message</b></label>
           <br>
           <textarea name="message" id="message" placeholder="Type your message here..."></textarea>
         </fieldset>
@@ -153,7 +155,6 @@
       </form>
     </div>
   </section>
-
   <footer>&copy; 2025 All Rights Reserved.</footer>
 </body>
 
