Add todo app and improve responsiveness

--- a/index.html
+++ b/index.html
@@ -32,9 +32,14 @@
           Currently a Powercoders participant, passionate about coding and
           enhancing both backend and frontend skills.
           <br>Want to know more about me? Keep reading!
+          <br>
+          <a href="https://github.com/yasminalan" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+          <a href="https://www.linkedin.com/in/yasemin-alan/" target="_blank" aria-label="LinkedIn">
+            <i class="fab fa-linkedin fa-2x" style="color:#0A66C2;"></i>
+          </a>
         </p>
-        <a href="documents/cv.pdf" target="_blank">
-          Download CV <i class="fas fa-download"></i></a>
+        <a id="cv" href="documents/cv.pdf" target="_blank">
+          Download CV <i id="cv-icon" class="fas fa-download"></i></a>
       </div>
     </div>
   </section>
@@ -107,12 +112,20 @@
     <div class="projects">
       <h2><i class="fas fa-project-diagram"></i> Projects</h2>
       <div class="project-items">
+        <a href="./todo-app/todo.html" target="_blank" class="project-container-link">
+          <div class="project-container">
+            <div class="project">
+              <img src="images/todo-app.png" style="object-fit: contain;" alt="Todo List App">
+            </div>
+            <h3>To-Do List APP</h3>
+          </div>
+        </a>
         <a href="https://github.com/yasminalan/todo-app" target="_blank" class="project-container-link">
           <div class="project-container">
             <div class="project">
               <img src="images/todo.jpg" alt="Todo List">
             </div>
-            <h3>To-Do List</h3>
+            <h3>To-Do List Github</h3>
           </div>
         </a>
 
