Fix github icon color

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
           enhancing both backend and frontend skills.
           <br>Want to know more about me? Keep reading!
           <br>
-          <a href="https://github.com/yasminalan" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+          <a href="https://github.com/yasminalan" target="_blank"><i style="color: black;"
+              class="fab fa-github fa-2x"></i></a>
           <a href="https://www.linkedin.com/in/yasemin-alan/" target="_blank" aria-label="LinkedIn">
             <i class="fab fa-linkedin fa-2x" style="color:#0A66C2;"></i>
           </a>
